--- a/databases/php-oci8/Makefile
+++ b/databases/php-oci8/Makefile
@@ -8,14 +8,13 @@ USE_PHP_EXT_PATCHES=	yes
 
 .include "../../mk/bsd.prefs.mk"
 
-.if !defined(ORACLE_HOME)
-PKG_FAIL_REASON+=	"You must set ORACLE_HOME to the location of your Oracle installation"
-.elif !exists(${ORACLE_HOME})
-PKG_FAIL_REASON+=	"The location of ORACLE_HOME does not exist"
-.endif
+ORACLEVERSION=		11.2.0.4.0
+DEPENDS+=               oracle-instantclient-basic>=${ORACLEVERSION}:../../databases/oracle-instantclient-basic
+DEPENDS+=               oracle-instantclient-sdk>=${ORACLEVERSION}:../../databases/oracle-instantclient-sdk
+ORACLE_HOME=		${PREFIX}/oracle/instant_client/${ORACLEVERSION}
 
 BUILDLINK_PASSTHRU_DIRS+=       ${ORACLE_HOME}
-CONFIGURE_ARGS+=		--with-${MODNAME}=shared,${ORACLE_HOME}
+CONFIGURE_ARGS+=		--with-${MODNAME}=instantclient,${ORACLE_HOME}
 
 ONLY_FOR_PLATFORM=      Linux-*-* SunOS-*-*
 
